--- a/PuntoVitaExams.API/appsettings.json
+++ b/PuntoVitaExams.API/appsettings.json
@@ -27,7 +27,7 @@
 
   "ConnectionStrings": {
 
-    "PuntoVitaExamsDbConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = PuntoVitaExamsDatabase"
+    "PuntoVitaExamsDbConnection": 
   },
   "AllowedHosts": "*"
 }
